test/test_bad/u.yang
module u {
  yang-version 1.1;
  namespace urn:u;
  prefix u;

  feature foo;
  feature bar;

  container a {
    if-feature "foo and not bar or foox"; // error: foox not defined
  }

  container b {
    if-feature "foo and not"; // error: bad syntax
  }

  container c {
    if-feature "foo and "; // error: bad syntax
  }

  action reset; // error: not allowed on top-level

  typedef id {
    type string {
      pattern '[a-zA-Z_][a-zA-Z0-9\-_.]*';
      pattern '[xX][mM][lL].*' {
        modifier invert-match;
      }
    }
  }

  leaf foo {
    type id;
    default "xMlu"; // error: bad pattern
  }

  leaf bar {
    type id;
    default "xmq-foo";
  }
}
